# spaces

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.docker.md  README.md  app.py  better_stack_logger.py  changelog.md  code-server-setup.sh  create_user_upload_table.py  docker-compose.yml  example.env  github_routes.py  hackatime_service.py  in-space.md  main.py  models.py  nginx.conf  package-lock.json  package.json  piston_service.py  pyproject.toml  requirements.txt  slack_auth.py  start.sh  static_server.py
.github/: dependabot.yml
.github/workflows/: ci.yml
client/: FRONTEND.md  demo.html  example.env  index.html  jsconfig.json  package-lock.json  vite.config.js
client/src/: App.svelte  DemoApp.svelte  app.css  config.js  demo.js  themes.js
migrations/: add_user_uploads_table.py
playground/godot/: index.html  service.worker.js
routes/: cdn_routes.py
src/: app.js  index.js
src/api/: index.js
src/middlewares/: admin.middleware.js  auth.middleware.js  errors.middleware.js  rate-limit.middleware.js
src/utils/: airtable.js  auto-stop.js  clubs.js  db.js  spaces.js  user.js  validation.js
static/css/: cdn.css
static/godot/: Dockerfile.dockerfile  godot.editor.html  godot.editor.js  index.html
static/js/: betterstack-logger.js  cdn.js  editor-core.js  error-handler.js  file-handling.js
templates/: admin_panel.html  base.html  cdn.html  club_dashboard.html  index.html  leader_onboarding.html  login.html  settings.html  signup.html  welcome.html
templates/errors/: 500.html  (+1 more)
utils/: logflow.py  logs_util.py  rate_limit.py
(+23 files in other folders)
